Ultra update, components factories, cambios en componentes...

--- a/WeirdEngine/Projects/WeirdEngine/WeirdEngine.vcxproj
+++ b/WeirdEngine/Projects/WeirdEngine/WeirdEngine.vcxproj
@@ -19,12 +19,43 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\src\WeirdEngine\Header Files\ButtonComponent.h" />
+    <ClInclude Include="..\..\src\WeirdEngine\Header Files\Component.h" />
+    <ClInclude Include="..\..\src\WeirdEngine\Header Files\ComponentFactory.h" />
+    <ClInclude Include="..\..\src\WeirdEngine\Header Files\Container.h" />
+    <ClInclude Include="..\..\src\WeirdEngine\Header Files\C_Factory.h" />
+    <ClInclude Include="..\..\src\WeirdEngine\Header Files\EntityC.h" />
+    <ClInclude Include="..\..\src\WeirdEngine\Header Files\FactoriesGestor.h" />
+    <ClInclude Include="..\..\src\WeirdEngine\Header Files\FactoryRegister.h" />
+    <ClInclude Include="..\..\src\WeirdEngine\Header Files\InputComponent.h" />
+    <ClInclude Include="..\..\src\WeirdEngine\Header Files\Messages_decl.h" />
+    <ClInclude Include="..\..\src\WeirdEngine\Header Files\Messages_defs.h" />
+    <ClInclude Include="..\..\src\WeirdEngine\Header Files\Observer.h" />
+    <ClInclude Include="..\..\src\WeirdEngine\Header Files\PhysicsComponent.h" />
+    <ClInclude Include="..\..\src\WeirdEngine\Header Files\RenderComponent.h" />
+    <ClInclude Include="..\..\src\WeirdEngine\Header Files\TestComponent.h" />
+    <ClInclude Include="..\..\src\WeirdEngine\Header Files\TransformComponent.h" />
+    <ClInclude Include="..\..\src\WeirdEngine\Header Files\Vector3.h" />
     <ClInclude Include="..\..\src\WeirdEngine\Header Files\WEManager.h" />
     <ClInclude Include="..\..\src\WeirdEngine\Header Files\Scene.h" />
     <ClInclude Include="..\..\src\WeirdEngine\Header Files\TimeManager.h" />
     <ClInclude Include="..\..\src\WeirdEngine\Header Files\weirdTimer.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\src\WeirdEngine\Source Files\ButtonComponent.cpp" />
+    <ClCompile Include="..\..\src\WeirdEngine\Source Files\Component.cpp" />
+    <ClCompile Include="..\..\src\WeirdEngine\Source Files\Container.cpp" />
+    <ClCompile Include="..\..\src\WeirdEngine\Source Files\C_Factory.cpp" />
+    <ClCompile Include="..\..\src\WeirdEngine\Source Files\EntityC.cpp" />
+    <ClCompile Include="..\..\src\WeirdEngine\Source Files\FactoriesGestor.cpp" />
+    <ClCompile Include="..\..\src\WeirdEngine\Source Files\FactoryRegister.cpp" />
+    <ClCompile Include="..\..\src\WeirdEngine\Source Files\InputComponent.cpp" />
+    <ClCompile Include="..\..\src\WeirdEngine\Source Files\Observer.cpp" />
+    <ClCompile Include="..\..\src\WeirdEngine\Source Files\PhysicsComponent.cpp" />
+    <ClCompile Include="..\..\src\WeirdEngine\Source Files\RenderComponent.cpp" />
+    <ClCompile Include="..\..\src\WeirdEngine\Source Files\TestComponent.cpp" />
+    <ClCompile Include="..\..\src\WeirdEngine\Source Files\TransformComponent.cpp" />
+    <ClCompile Include="..\..\src\WeirdEngine\Source Files\Vector3.cpp" />
     <ClCompile Include="..\..\src\WeirdEngine\Source Files\WEManager.cpp" />
     <ClCompile Include="..\..\src\WeirdEngine\Source Files\Scene.cpp" />
     <ClCompile Include="..\..\src\WeirdEngine\Source Files\TimeManager.cpp" />
