--- a/WeirdEngine/Projects/DataManager/DataManager.vcxproj
+++ b/WeirdEngine/Projects/DataManager/DataManager.vcxproj
@@ -19,39 +19,11 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\src\DataManager\Header Files\Component.h" />
-    <ClInclude Include="..\..\src\DataManager\Header Files\ComponentFactory.h" />
-    <ClInclude Include="..\..\src\DataManager\Header Files\Container.h" />
-    <ClInclude Include="..\..\src\DataManager\Header Files\C_Factory.h" />
     <ClInclude Include="..\..\src\DataManager\Header Files\DataManager.h" />
-    <ClInclude Include="..\..\src\DataManager\Header Files\EntityC.h" />
-    <ClInclude Include="..\..\src\DataManager\Header Files\FactoriesGestor.h" />
-    <ClInclude Include="..\..\src\DataManager\Header Files\FactoryRegister.h" />
-    <ClInclude Include="..\..\src\DataManager\Header Files\InputComponent.h" />
     <ClInclude Include="..\..\src\DataManager\Header Files\json.hpp" />
-    <ClInclude Include="..\..\src\DataManager\Header Files\Messages_decl.h" />
-    <ClInclude Include="..\..\src\DataManager\Header Files\Messages_defs.h" />
-    <ClInclude Include="..\..\src\DataManager\Header Files\Observer.h" />
-    <ClInclude Include="..\..\src\DataManager\Header Files\PhysicsComponent.h" />
-    <ClInclude Include="..\..\src\DataManager\Header Files\RenderComponent.h" />
-    <ClInclude Include="..\..\src\DataManager\Header Files\TestComponent.h" />
-    <ClInclude Include="..\..\src\DataManager\Header Files\TransformComponent.h" />
-    <ClInclude Include="..\..\src\DataManager\Header Files\WEInput.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\src\DataManager\Source Files\Component.cpp" />
-    <ClCompile Include="..\..\src\DataManager\Source Files\Container.cpp" />
     <ClCompile Include="..\..\src\DataManager\Source Files\DataManager.cpp" />
-    <ClCompile Include="..\..\src\DataManager\Source Files\EntityC.cpp" />
-    <ClCompile Include="..\..\src\DataManager\Source Files\FactoriesGestor.cpp" />
-    <ClCompile Include="..\..\src\DataManager\Source Files\FactoryRegister.cpp" />
-    <ClCompile Include="..\..\src\DataManager\Source Files\InputComponent.cpp" />
-    <ClCompile Include="..\..\src\DataManager\Source Files\Observer.cpp" />
-    <ClCompile Include="..\..\src\DataManager\Source Files\PhysicsComponent.cpp" />
-    <ClCompile Include="..\..\src\DataManager\Source Files\RenderComponent.cpp" />
-    <ClCompile Include="..\..\src\DataManager\Source Files\TestComponent.cpp" />
-    <ClCompile Include="..\..\src\DataManager\Source Files\TransformComponent.cpp" />
-    <ClCompile Include="..\..\src\DataManager\Source Files\WEInput.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
@@ -109,7 +81,7 @@
     <LinkIncremental>true</LinkIncremental>
     <OutDir>$(SolutionDir)build\libs\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)inter\$(Platform)\$(Configuration)\$(ProjectName)</IntDir>
-    <IncludePath>$(SolutionDir)src\DataManager\Header Files;$(SolutionDir)src\Input\Header Files;$(SolutionDir)src\WeirdEngine\Header Files;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)src\DataManager\Header Files;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)build\libs\$(Platform)\$(Configuration);$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -122,7 +94,7 @@
     <LinkIncremental>false</LinkIncremental>
     <IntDir>$(SolutionDir)inter\$(Platform)\$(Configuration)\$(ProjectName)</IntDir>
     <OutDir>$(SolutionDir)build\libs\$(Platform)\$(Configuration)\</OutDir>
-    <IncludePath>$(SolutionDir)src\DataManager\Header Files;$(SolutionDir)src\Input\Header Files;$(SolutionDir)src\WeirdEngine\Header Files;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)src\DataManager\Header Files;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)build\libs\$(Platform)\$(Configuration);$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
