--- a/WeirdEngine/Projects/PhysicsEngine/PhysicsEngine.vcxproj
+++ b/WeirdEngine/Projects/PhysicsEngine/PhysicsEngine.vcxproj
@@ -24,6 +24,9 @@
   <ItemGroup>
     <ClCompile Include="..\..\src\PhysicsEngine\Source Files\PhysicsEngine.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <ProjectGuid>{CDFFC06D-F609-46B9-8E3F-F63475CAB5EE}</ProjectGuid>
