--- a/WeirdEngine/Projects/RetroRunner/RetroRunner.vcxproj
+++ b/WeirdEngine/Projects/RetroRunner/RetroRunner.vcxproj
@@ -25,6 +25,9 @@
     <ClCompile Include="..\..\src\TestProject\Source Files\Game.cpp" />
     <ClCompile Include="..\..\src\TestProject\Source Files\TestMain.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <ProjectGuid>{EDC42D08-04BF-4827-A0A4-40F04B2F4867}</ProjectGuid>
