--- a/WeirdEngine/Projects/RetroRunner/RetroRunner.vcxproj.filters
+++ b/WeirdEngine/Projects/RetroRunner/RetroRunner.vcxproj.filters
@@ -27,4 +27,7 @@
       <Filter>Archivos de recursos</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
 </Project>
