--- a/WeirdEngine/exes/resources.cfg
+++ b/WeirdEngine/exes/resources.cfg
@@ -4,3 +4,15 @@
 # A continuacion se definiran los miembros de ese grupo
 [Ninja]
 FileSystem=resources/meshes
+[Imagesets]
+FileSystem=resources/cegui/imagesets/
+[Fonts]
+FileSystem=resources/cegui/fonts/
+[Schemes]
+FileSystem=resources/cegui/schemes/
+[LookNFeel]
+FileSystem=resources/cegui/looknfeel/
+[Layouts]
+FileSystem=resources/cegui/layouts/
+[Scripts]
+FileSystem=resources/cegui/lua_scripts/
