--- a/WeirdEngine/Projects/WeirdEngine/WeirdEngine.vcxproj
+++ b/WeirdEngine/Projects/WeirdEngine/WeirdEngine.vcxproj
@@ -19,7 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\src\WeirdEngine\Header Files\ButtonComponent.h" />
+    <ClInclude Include="..\..\src\WeirdEngine\Header Files\AddCameraToSceneComponent.h" />
+    <ClInclude Include="..\..\src\WeirdEngine\Header Files\AttachCameraToEntComponent.h" />
     <ClInclude Include="..\..\src\WeirdEngine\Header Files\Component.h" />
     <ClInclude Include="..\..\src\WeirdEngine\Header Files\ComponentFactory.h" />
     <ClInclude Include="..\..\src\WeirdEngine\Header Files\Container.h" />
@@ -33,6 +34,7 @@
     <ClInclude Include="..\..\src\WeirdEngine\Header Files\Observer.h" />
     <ClInclude Include="..\..\src\WeirdEngine\Header Files\PhysicsComponent.h" />
     <ClInclude Include="..\..\src\WeirdEngine\Header Files\RenderComponent.h" />
+    <ClInclude Include="..\..\src\WeirdEngine\Header Files\RotateInputComponent.h" />
     <ClInclude Include="..\..\src\WeirdEngine\Header Files\TestComponent.h" />
     <ClInclude Include="..\..\src\WeirdEngine\Header Files\TransformComponent.h" />
     <ClInclude Include="..\..\src\WeirdEngine\Header Files\Utilities\Vector3.h" />
@@ -43,7 +45,8 @@
     <ClInclude Include="..\..\src\WeirdEngine\Header Files\weirdTimer.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\src\WeirdEngine\Source Files\ButtonComponent.cpp" />
+    <ClCompile Include="..\..\src\WeirdEngine\Source Files\AddCameraToSceneComponent.cpp" />
+    <ClCompile Include="..\..\src\WeirdEngine\Source Files\AttachCameraToEntComponent.cpp" />
     <ClCompile Include="..\..\src\WeirdEngine\Source Files\Component.cpp" />
     <ClCompile Include="..\..\src\WeirdEngine\Source Files\Container.cpp" />
     <ClCompile Include="..\..\src\WeirdEngine\Source Files\EntityC.cpp" />
@@ -53,6 +56,7 @@
     <ClCompile Include="..\..\src\WeirdEngine\Source Files\Observer.cpp" />
     <ClCompile Include="..\..\src\WeirdEngine\Source Files\PhysicsComponent.cpp" />
     <ClCompile Include="..\..\src\WeirdEngine\Source Files\RenderComponent.cpp" />
+    <ClCompile Include="..\..\src\WeirdEngine\Source Files\RotateInputComponent.cpp" />
     <ClCompile Include="..\..\src\WeirdEngine\Source Files\TestComponent.cpp" />
     <ClCompile Include="..\..\src\WeirdEngine\Source Files\TransformComponent.cpp" />
     <ClCompile Include="..\..\src\WeirdEngine\Source Files\Vector3.cpp" />
