--- a/WeirdEngine/Projects/WeirdEngine/WeirdEngine.vcxproj.filters
+++ b/WeirdEngine/Projects/WeirdEngine/WeirdEngine.vcxproj.filters
@@ -21,6 +21,7 @@
     <ClCompile Include="..\..\src\WeirdEngine\Source Files\AttachCameraToEntComponent.cpp" />
     <ClCompile Include="..\..\src\WeirdEngine\Source Files\AddCameraToSceneComponent.cpp" />
     <ClCompile Include="..\..\src\WeirdEngine\Source Files\RotateInputComponent.cpp" />
+    <ClCompile Include="..\..\src\WeirdEngine\Source Files\LoopSoundComponent.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\WeirdEngine\Header Files\Component.h" />
@@ -47,5 +48,6 @@
     <ClInclude Include="..\..\src\WeirdEngine\Header Files\AttachCameraToEntComponent.h" />
     <ClInclude Include="..\..\src\WeirdEngine\Header Files\AddCameraToSceneComponent.h" />
     <ClInclude Include="..\..\src\WeirdEngine\Header Files\RotateInputComponent.h" />
+    <ClInclude Include="..\..\src\WeirdEngine\Header Files\LoopSoundComponent.h" />
   </ItemGroup>
 </Project>
