Game Files out of the engine
Quitamos los archivos del juego del motor paramoverlos al juego.

--- a/WeirdEngine/exes/resources.cfg
+++ b/WeirdEngine/exes/resources.cfg
@@ -3,7 +3,7 @@
 # Los [nombre] seran los nombres de los grupos
 # A continuacion se definiran los miembros de ese grupo
 [Ninja]
-FileSystem=resources/meshes
+FileSystem=../../../resources/meshes
 [Imagesets]
 FileSystem=resources/cegui/imagesets/
 [Fonts]
